// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composables > useSecretContext > should create a new SecretBinding manifest with defaults 1`] = `
{
  "apiVersion": "core.gardener.cloud/v1beta1",
  "kind": "SecretBinding",
  "metadata": {
    "name": "",
    "namespace": "garden-foo",
  },
  "provider": {
    "type": "",
  },
  "secretRef": {
    "name": "",
    "namespace": "garden-foo",
  },
}
`;

exports[`composables > useSecretContext > should set SecretBinding manifest 1`] = `
{
  "apiVersion": "core.gardener.cloud/v1beta1",
  "kind": "SecretBinding",
  "metadata": {
    "name": "foo",
    "namespace": "garden-foo",
  },
  "provider": {
    "type": "aws",
  },
}
`;
